ST-844: Revert ci.yml file and removed SuppressWarnings