@@ -29,7 +29,6 @@ import static uk.gov.hmcts.sptribs.common.CommonConstants.DECISION_NOTICE;
 
 @Component
 @Slf4j
-//@SuppressWarnings({"squid:S6204"})
 public class DecisionIssuedNotification implements PartiesNotification {
 
     @Autowired
@@ -139,7 +138,7 @@ public class DecisionIssuedNotification implements PartiesNotification {
         if (cicCase.getApplicantDocumentsUploaded() != null) {
             List<String> uploadedDocumentsUrls = cicCase.getApplicantDocumentsUploaded().stream().map(ListValue::getValue)
                 .map(item -> StringUtils.substringAfterLast(item.getDocumentLink().getUrl(), "/"))
-                .collect(Collectors.toList());
+                .toList();
 
             count++;
             for (String item : uploadedDocumentsUrls) {
